--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="page1">page1</a></li>
                     <li><a href="page2">page2</a></li>
-                    <li><a href="page3">page3</a></li>
+                    <li><a href="page3" data-dir="reverse">page3</a></li>
                 </ul>
             </nav>
             <div class="page red active" data-page="page1">
